@startuml

class OilCoupon{
   - String id: String ; 主键
   - String orgCode; 卡券所属公司
   - String pan; 加油券编号
   - Double panAmt; 电子券金额
   - String panName; 加油券名称
   - String oilState; 加油券状态 0：未售、1：已售
   - String createTime; 创建日期
   - String panDescription; 加油券描述
   - String distributionTime; 分配时间
   - Double costPrice;成本价
}

class OilCouponSearchLog {
   - String id;
   - String accountId; 账号ID
   - String orderId; 订单ID
   - Date createTime;查看时间
   - String pan;油卡编号
   - String ip;ip地址
}
class Goods {
   - String id;
   - String name; 商品名称
   - String image; 商品图片
   - Double price; 商品原格
   - Double saledPrice; 折后价格
   - String descriptions; 商品描述
   - Integer status; 商品状态 0 已下架 1 已上架
   - String createTime; 创建时间
   - String couponDetail; 商品详情[面值：数量] JSON
   - String couponTempletId; 赠送商品
   - Double disCount; 折扣
}
class Activity {
   - String id;
   - String name; 活动名称
   - Date createTime; 创建时间
   - Date beginTime; 活动开始时间
   - Date endTime; In
   - Integer status; 启用状态 0 已启用 1 未启用
   - Integer type; 活动规则  活动类型 1 折中折 2 赠券
   - String goods; 商品 [1,2,3] JSONArray
}
class MyOilCoupon {
   - String id;
   - Date createTime;创建日期
   - String orderId; 订单编号
   - String accountId; 用户Id
   - String goodId; 商品Id
}
class MyOilCouponDetail {
   - String id;
   - String MyOilCouponId;
   - String pan; 加油券编号
   - Double panAmt; 电子券金额
   - Date createTime;创建日期/分配时间
   - String useState; 使用状态 0：未使用、1：已使用
   - Date useDate; 使用时间
   - Date openDate; 生效日期
   - Date endDate; 失效日期
   - String tId; 使用的加油站Id
}
class OneMoneyCouponRecord{
   - String id;
   - String accountId;
   - Integer status; 0 未购买过 1 已购买过
   - String orderId; 违法订单号
}


Activity  --|>Goods
OilCoupon --|>OilCouponSearchLog
MyOilCoupon --|>MyOilCouponDetail
@enduml